--- a/index.html
+++ b/index.html
@@ -545,9 +545,9 @@
                 
                 <div style="margin-top: 50px;">
                     <h3>Прямая связь</h3>
-                    <p>📞 <a href="tel:+79163019174" style="color: var(--accent-color); text-decoration: none;">+7 (999) 000-00-00</a></p>
+                    <p>📞 <a href="tel:+79163019174" style="color: var(--accent-color); text-decoration: none;">+7 (916) 3019174</a></p>
                     <p>📍 Москва и МО (выезд обсуждается)</p>
-                    <p>✉️ <a href="mailto:ry.bar@example.com" style="color: var(--accent-color); text-decoration: none;">ry.bar@example.com</a></p>
+                    <p>✉️ <a href="mailto:ry.bar@example.com" style="color: var(--accent-color); text-decoration: none;">denis.pashenkov@gmail.com</a></p>
                 </div>
             </div>
 
