--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
 
     <footer>
         <div class="logo-container" style="justify-content: center; margin-bottom: 20px; opacity: 0.7;">
-            <img src="image_0.png" alt="RY Logo" class="logo-img" style="height: 40px;">
+            <img src="logo.jpg" alt="RY Logo" class="logo-img" style="height: 40px;">
             <div class="logo-text" style="text-align: left;">
                 <span class="logo-title" style="font-size: 1.2rem;">RY</span>
             </div>
