--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RY | THE ART OF MIXOLOGY</title>
+    <link rel="icon" type="image/jpg" href="logo.jpg">
     <style>
         /* --- НАСТРОЙКИ ДИЗАЙНА --- */
         :root {
