--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
             let details = document.getElementById('details').value;
 
             // ВАЖНО: Замените YOUR_TG_NICKNAME на ваш реальный ник в Telegram (без @)
-            let myTgNickname = "YOUR_TG_NICKNAME"; 
+            let myTgNickname = "@Bartender_Ry"; 
             
             // Формируем сообщение
             let message = `🔥 Новая заявка с сайта!%0A%0A👤 Имя: ${name}%0A📱 Контакт: ${phone}%0A🍸 Услуга: ${service}%0A📝 Детали: ${details ? details : 'Не указаны'}`;
