--- a/index.html
+++ b/index.html
@@ -529,18 +529,45 @@
 
         </div>
         
-        <section id="blog">
-        <h2 class="section-title">Лента новостей</h2>
-        <div style="background: white; border-radius: 10px; overflow: hidden; max-width: 600px; margin: 0 auto;">
-            <section id="blog">
-        <h2 class="section-title">Последнее в Telegram</h2>
-        <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
+      <section id="news">
+        <h2 class="section-title">Индустрия и Тренды</h2>
+        <div class="services-grid">
             
-            <script async src="https://telegram.org/js/telegram-widget.js?22" 
-                    data-telegram-post="bartenderRy/307" 
-                    data-width="100%" 
-                    data-userpic="false" 
-                    data-dark="1">
+            <div class="service-card" style="padding: 0; overflow: hidden; border: 1px solid #333;">
+                <div style="height: 200px; overflow: hidden;">
+                    <img src="https://images.unsplash.com/photo-1514362545857-3bc16549766b?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" style="width: 100%; height: 100%; object-fit: cover; opacity: 0.8;" alt="News 1">
+                </div>
+                <div style="padding: 25px;">
+                    <h3 style="color: #fff; margin-top: 0;">The World's 50 Best Bars</h3>
+                    <p style="color: #ccc; font-size: 0.9rem;">Объявлен список лучших баров мира 2024. Узнайте, кто занял первое место и какие тренды диктуют лидеры индустрии.</p>
+                    <a href="https://www.worlds50bestbars.com/" target="_blank" class="btn btn-outline" style="font-size: 0.8rem; margin-top: 10px; display: inline-block;">Читать источник</a>
+                </div>
+            </div>
+
+            <div class="service-card" style="padding: 0; overflow: hidden; border: 1px solid #333;">
+                <div style="height: 200px; overflow: hidden;">
+                    <img src="https://images.unsplash.com/photo-1572116469696-958721b7d690?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" style="width: 100%; height: 100%; object-fit: cover; opacity: 0.8;" alt="News 2">
+                </div>
+                <div style="padding: 25px;">
+                    <h3 style="color: #fff; margin-top: 0;">Тренды миксологии 2025</h3>
+                    <p style="color: #ccc; font-size: 0.9rem;">Кларификация, локальные ингредиенты и низкий алкоголь. Что будут пить гости в следующем сезоне?</p>
+                    <a href="https://diffordsguide.com/" target="_blank" class="btn btn-outline" style="font-size: 0.8rem; margin-top: 10px; display: inline-block;">Обзор Difford's</a>
+                </div>
+            </div>
+
+            <div class="service-card" style="padding: 0; overflow: hidden; border: 1px solid #333;">
+                <div style="height: 200px; overflow: hidden;">
+                    <img src="https://images.unsplash.com/photo-1551024709-8f23befc6f87?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" style="width: 100%; height: 100%; object-fit: cover; opacity: 0.8;" alt="News 3">
+                </div>
+                <div style="padding: 25px;">
+                    <h3 style="color: #fff; margin-top: 0;">Bar Convent Berlin</h3>
+                    <p style="color: #ccc; font-size: 0.9rem;">Итоги крупнейшей барной выставки Европы. Новое оборудование и революция в мире льда.</p>
+                    <a href="https://www.barconvent.com/" target="_blank" class="btn btn-outline" style="font-size: 0.8rem; margin-top: 10px; display: inline-block;">Подробнее</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
             </script>
 
         </div>
