--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                 <div class="service-description">
                     <p>Комплексная разработка барного меню под ключ для заведений.</p>
                     <ul>
-                        <li><strong>12–20 позиций:</strong> Кофе, матча, безалкогольные, бар на выбор.</li>
+                        <li><strong>12–20 позиций:</strong> Кофе, матча, безалкогольные, коктейли , бар на выбор.</li>
                         <li><strong>Документация:</strong> Техкарты + калькуляции, целевая маржа.</li>
                         <li><strong>Организация:</strong> План заготовок и бейчинга.</li>
                         <li><strong>Внедрение:</strong> В iiko/r_keeper.</li>
